// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Helmet should add noindex tag, if city is not live 1`] = `
<HelmetWrapper
  defer={true}
  encodeSpecialCharacters={true}
>
  <title>
    PageTitle
  </title>
  <meta
    content="noindex"
    name="robots"
  />
  <link
    href="/testinstanz/de"
    hrefLang="de"
    key="de"
    rel="alternate"
  />
  <link
    href="/testinstanz/en"
    hrefLang="en"
    key="en"
    rel="alternate"
  />
  <link
    href="/testinstanz/ar"
    hrefLang="ar"
    key="ar"
    rel="alternate"
  />
  <meta
    content="PageTitle"
    property="og:title"
  />
  <meta
    content="https://integreat.app/social-media-preview.png"
    property="og:image"
  />
  <meta
    content="http://localhost/"
    property="og:url"
  />
  <meta
    content="website"
    property="og:type"
  />
</HelmetWrapper>
`;

exports[`Helmet should render and match snapshot 1`] = `
<HelmetWrapper
  defer={true}
  encodeSpecialCharacters={true}
>
  <title>
    PageTitle
  </title>
  <meta
    content="MetaDescription"
    name="description"
  />
  <link
    href="/augsburg/de"
    hrefLang="de"
    key="de"
    rel="alternate"
  />
  <link
    href="/augsburg/en"
    hrefLang="en"
    key="en"
    rel="alternate"
  />
  <link
    href="/augsburg/ar"
    hrefLang="ar"
    key="ar"
    rel="alternate"
  />
  <meta
    content="PageTitle"
    property="og:title"
  />
  <meta
    content="https://integreat.app/social-media-preview.png"
    property="og:image"
  />
  <meta
    content="MetaDescription"
    property="og:description"
  />
  <meta
    content="http://localhost/"
    property="og:url"
  />
  <meta
    content="website"
    property="og:type"
  />
</HelmetWrapper>
`;
